<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/bluetoothButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bluetoothBottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bluetoothTopGuideline"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_blue_dark" />

    <ImageButton
        android:id="@+id/mainMenuButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="openImageGallery"
        app:layout_constraintBottom_toTopOf="@+id/mainButtonBottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetoothButton"
        app:srcCompat="@android:color/holo_green_dark" />

    <ImageButton
        android:id="@+id/groupButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="openAboutUs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuButton"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:color/holo_red_dark" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bluetoothTopGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bluetoothBottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainButtonBottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/aboutUsBottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/bluetoothText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_bluetooth"
        app:layout_constraintBottom_toTopOf="@+id/bluetoothBottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bluetoothButton"
        app:layout_constraintTop_toTopOf="@+id/bluetoothButton" />

    <TextView
        android:id="@+id/mainAppText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_hologram_hand"
        app:layout_constraintBottom_toBottomOf="@+id/mainMenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mainMenuButton"
        app:layout_constraintTop_toBottomOf="@+id/bluetoothButton" />

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:onClick="openAboutUs"
        app:layout_constraintBottom_toTopOf="@+id/aboutUsBottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/groupButton"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuButton" />


</androidx.constraintlayout.widget.ConstraintLayout>